new file changes after check in

--- a/contAccountStart.html
+++ b/contAccountStart.html
@@ -59,7 +59,7 @@
 					</div>
 
 					<div style="width: 65%; float: right; height: 80%;">
-					<p class="orgDes">415-222-8323</p>
+					<p class="orgDes">646-244-7521</p>
 					</div>
 				</li>
 
@@ -71,7 +71,7 @@
 					</div>
 
 					<div style="width: 65%; float: right; height: 80%;">
-					<p class="orgDes">something@gmail.com</p>
+					<p class="orgDes">serena.s.xu@gmail.com</p>
 					</div>
 				</li>
 
@@ -79,66 +79,26 @@
 
 			</ul>
 
-			<button class="tfbutton" onclick="window.location.href='contAccountEdit.html'" href="contAccountEdit.html">Edit Profile</button>
+			<button class="tfbutton" onclick="window.location.href='contAccountStartEdit.html'" href="contAccountStartEdit.html">Edit Profile</button>
 
 		</div>
 
 		<div class="reqAcctBox">
-			<div id="box" style="height: 15em; margin-bottom: 3%;">
+			<div id="box" style="height: 10em; margin-bottom: 3%;">
 
 				<header class="reqHead" style="margin: 2% auto 2% auto; text-align: center;">Active Donations</header>
 
 				<div style="height: 85%; overflow-y: scroll">
-					<nav id="menu">
-						<ul class="parent-menu">
-						<li>
-							<a href="#">
-								<div style="float: left;">100 White Shirts</div>
-								<div style="float: right;">6/20/14</div>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<div style="float: left;">500 Cans of dog food</div>
-								<div style="float: right;">6/16/14</div>
-							</a>
-						</li>
-						</ul>
-					</nav>
+					<p>No donations yet. Please browse the postings.</p>
+					<button class="tfbutton" onclick="window.location.href='searchResults.html'" href="searchResults.html">Browse</button>
 				</div>
 
 			</div>
-			<div id="box" style=" height: 20em; ">
+			<div id="box" style=" height: 10em; ">
 				<header class="reqHead" style="margin: 2% auto 2% auto; text-align: center;">Donation History</header>
 
-				<div style="height: 85%; overflow-y: scroll">
-					<nav id="menu">
-						<ul class="parent-menu">
-						<li>
-							<a href="#">
-								<div style="float: left;">5 Laserjet Printers</div>
-								<div style="float: right;">6/13/14</div>
-							</a>
-						</li>
-						<li>
-							<a href="historyRequestCont.html">
-								<div style="float: left;">50 Bottles of Water</div>
-								<div style="float: right;">5/10/14</div>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<div style="float: left;">30 Car Rides</div>
-								<div style="float: right;">5/1/14</div>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<div style="float: left;">50 Name plates</div>
-								<div style="float: right;">4/1/14</div>
-							</a>
-						</li>
-						</ul>
+				<div style=" overflow-y: scroll">
+					<p>This is where you will have record of your donations.</p>
 					</nav>
 				</div>
 			</div>
