--- a/historyRequestOrg.html
+++ b/historyRequestOrg.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
-	<title>50 Bottles of Water</title>
+	<title>100 Bottles of Water</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
-			<a href="profile.html">ACCOUNT</a>
-			<a href="new1.html">MESSAGES</a>
+			<a href="orgAccount.html">ACCOUNT</a>
+			<a href="messageOrg.html">MESSAGES</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div style="float: right; margin: 0 2rem 2rem 0">
-			<a href="orgAccount.html" id="orgName">Salvation Army</a>	
+			<a href="orgAccount.html" id="orgName">Salvation Army</a>
 			<a action="logOut">Log Out</a>
 			</div>
 	</div>
@@ -115,10 +115,10 @@
 		-->
 
 			<header class="fulfilled">80% Fulfilled</header>
-			<div class="progressBar">			
+			<div class="progressBar">
 				<div class="completeBar" style="width: 80%;"></div>
 			</div>
-		
+
 			<div style="margin-top: 8%;">
 				<ul class="requestDates">
 					<li>
@@ -141,7 +141,7 @@
 
 
 				</ul>
-			
+
 			</div>
 			<p></p>
 
@@ -150,7 +150,7 @@
 		<div id="box" style=" height: 20em; width: 40%; float: right;">
 
 			<header class="contHead">Contributors</header>
-		
+
 			<div style="margin-top: 8%;">
 				<ul class="requestDates">
 				<li>
@@ -193,7 +193,7 @@
 				<li><hr></li>
 
 				</ul>
-			
+
 			</div>
 			<p></p>
 
