--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>HOME</title>
@@ -8,8 +8,8 @@
 	<div class="topLinks">
 
 	</div>
-	
-	
+
+
 
 	<div id="promiseBox" >
 		<div style="float: none; margin-bottom: 2rem">
@@ -22,9 +22,9 @@
 
 			<p style="font-size: 1.5rem;">Or just start searching.</p>
 
-			<form id="tfnewsearch" method="get" >
-		        <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input style="width: 5em;" onclick="window.location.href='searchResults.html'" href="postings.html" type="submit" value="search" class="tfbutton">
-			<button class="tfbutton" onclick="window.location.href='browse.html'" href="browse.html.html">Browse</button>
+			<form action="searchResults.html" id="tfnewsearch" method="get" >
+		        <input action="searchResults.html"type="text" class="tftextinput" name="q" size="21" maxlength="120"><input style="width: 5em;" onclick="window.location.href='searchResults.html'" type="submit" value="search" class="tfbutton">
+			<button class="tfbutton" onclick="window.location.href='searchResults.html'">Browse</button>
 			</form>
 			<div class="tfclear"></div>
 
