--- a/logIn.html
+++ b/logIn.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>LOG IN</title>
@@ -21,9 +21,9 @@
 	<div id="promiseBox" style="margin-top: 15%; height: 33em;">
 		<div style="float: none; margin-bottom: 2rem">
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
-		</div>	
+		</div>
 
-		<form action="checkUserPassword" method="post" id="subForm">
+		<form action="contAccount.html" method="post" id="subForm">
 			<ul>
 				<li>
 					<label style="width: 5em;" for="l133578-133578">Username:</label> <input type="text" name="cm-133578-133578" id="user" required/>
@@ -38,7 +38,7 @@
 				</li>
 			</ul>
 		</form>
-	
+
 	</div>
 <footer>
 	<nav class="bottomLinks">
