--- a/newContributor.html
+++ b/newContributor.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>NEW CONTRIBUTOR</title>
@@ -13,20 +13,20 @@
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div class="log" style="float: right; width: 10%; margin-bottom: 2rem">
 			<a href="newUser.html">Sign Up</a>
-			<a href="logIn.html">Log In</a>		
+			<a href="logIn.html">Log In</a>
 			</div>
 	</div>
-		
+
 		<div id="box" style="padding: 3% 3% 3% 3%; margin: 2% auto 0 auto; width: 40%;">
-			<form action="orgVerify.html" method="post" id="subForm">
+			<form action="contAccountStart.html" method="post" id="subForm">
 			<header class="fulfilled" style="margin-bottom: 5%;">Make an Account</header>
 
 			<p style="text-align: center;">*Required Fields</p>
@@ -37,7 +37,7 @@
 					<p style="margin:0; text-align: center;" id="nameInfo"></p>
 				</li>
 				<li>
-					<label for="city">City:</label> <input type="text" name="city" id="city"/>
+					<label for="city">Location:</label> <input placeholder="City, State" type="text" name="city" id="city"/>
 				</li>
 				<li>
 					<label for="phone">* Phone Number:</label> <input type="tel" id="phone" id="phone" /><p style="margin:0; text-align: center;" id="phoneInfo"></p>
@@ -61,7 +61,7 @@
 			</ul>
 			</form>
 		</div>
-	
+
 	</div>
 <footer>
 	<nav class="bottomLinks">
