--- a/newOrg.html
+++ b/newOrg.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>NEW ORGANIZATION</title>
@@ -13,25 +13,25 @@
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div class="log" style="float: right; width: 10%; margin-bottom: 2rem">
 			<a href="newUser.html">Sign Up</a>
-			<a href="logIn.html">Log In</a>		
+			<a href="logIn.html">Log In</a>
 			</div>
 	</div>
-		
+
 	<div id="box" style="padding: 3% 3% 3% 3%; margin: 2% auto 0 auto; width: 40%;">
 		<header class="fulfilled" style="margin-bottom: 5%;">Register Your Organization</header>
 
 		<p style="text-align: center;">*Required Fields</p>
 
 
-		<form onsubmit="return validateForm()"method="post" id="subForm">
+		<form action="orgVerify.html" onsubmit="return validateForm()"method="post" id="subForm">
 			<ul class="longSign">
 
 				<li>
@@ -69,7 +69,7 @@
 				<input class="tfbutton" type="submit" value="Submit for Verification">
 			</ul>
 
-		</form>  
+		</form>
 
 	</div>
 <footer>
