--- a/orgVerify.html
+++ b/orgVerify.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>NEW USER</title>
@@ -10,21 +10,21 @@
 			<a href="profile.html">ACCOUNT</a>
 			<a href="new1.html">MESSAGES</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div style="float: right; width: 10%; margin-bottom: 2rem">
 			<a href="newUser.html">SIGN UP</a>
-			<a href="signIn.html">LOG IN</a>		
+			<a href="signIn.html">LOG IN</a>
 			</div>
 	</div>
 
 	<div id="promiseBox" style="height: 22%;">
 			<p>Thank you for registering. We will verify your organization and contact you shortly. In the meantime, please browse postings from registered organizations.</p>
-			<button class="tfbutton" onclick="window.location.href='searchResults.html'" href="searchResults.html">Browse</button>	
+			<button class="tfbutton" onclick="window.location.href='searchResultsAsOrg.html'" href="searchResults.html">Browse</button>
 	</div>
 <footer>
 	<nav class="bottomLinks">
