--- a/requestReceived.html
+++ b/requestReceived.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Request Received</title>
@@ -11,6 +11,17 @@
 			<a href="new1.html">MESSAGES</a>
 	</div>
 
+	<div id="introBox">
+			<div style="float: left; width: 20%; margin-bottom: 2rem">
+			<img class="logo" style="width: 70%;" src="helpLogo.png">
+			</div>
+
+			<div style="float: right; width: 10%; margin-bottom: 2rem">
+			<a href="contAccount.html" id="orgName">Salvation Army</a>
+			<a action="logOut">Log Out</a>
+			</div>
+	</div>
+
 	<div id="promiseBox" style="height: 30em;">
 			<div style="float: none; margin-bottom: 2rem">
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
@@ -19,7 +30,7 @@
 
 		<button class="tfbutton" onclick="window.location.href='newRequest.html'" href="newRequest.html">New Request</button>
 
-		<button class="tfbutton" onclick="window.location.href='searchResults.html'" href="searchResults.html">Search</button>
+		<button class="tfbutton" onclick="window.location.href='searchResultsAsOrg.html'" href="searchResultsAsOrg.html">Search</button>
 	</div>
 
 <footer>
