--- a/searchResultsAsOrg_need.html
+++ b/searchResultsAsOrg_need.html
@@ -7,8 +7,8 @@
 <body>
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
-			<a href="contAccount.html">ACCOUNT</a>
-			<a href="message.html">MESSAGES</a>
+			<a href="orgAccount.html">ACCOUNT</a>
+			<a href="messageOrg.html">MESSAGES</a>
 	</div>
 
 	<div id="introBox">
@@ -17,7 +17,7 @@
 			</div>
 
 			<div class="log" style="float: right; margin-bottom: 2rem">
-				<a href="contAccount.html">Serena Xu</a>
+				<a href="contAccount.html">Salvation Army</a>
 				<a action="logOut">Log Out</a>
 			</div>
 	</div>
@@ -35,11 +35,11 @@
 
 		<div style="float: right; height: 2em; width: 8em;">
 			<select onchange="location = this.options[this.selectedIndex].value;" class="tfbutton" style="width: 100%; height: 100%;">
-				<option value="searchResults.html">Sort By</option>
-  				<option value="searchResults.html">Date</option>
-  				<option value="searchResults_org.html">Organization</option>
-  				<option value="searchResults_need.html">Needs</option>
-  				<option value="searchResults_loc.html">Location</option>
+				<option value="searchResultsAsOrg.html">Sort By</option>
+  				<option value="searchResultsAsOrg.html">Date</option>
+  				<option value="searchResultsAsOrg_org.html">Organization</option>
+  				<option value="searchResultsAsOrg_need.html">Needs</option>
+  				<option value="searchResultsAsOrg_loc.html">Location</option>
 			</select>
 	</div>
 	</nav>
@@ -61,7 +61,7 @@
 							<p>San Francisco, CA</p>
 						</div>
 						<p></p>
-						<a id="searchReqPreview" href="requestPublic.html">
+						<a id="searchReqPreview" href="requestPublicOrg.html">
 							100 Bottles of Water
 						</a>
 					</div>
