--- a/searchResults_loc.html
+++ b/searchResults_loc.html
@@ -61,31 +61,8 @@
 							<p>San Francisco, CA</p>
 						</div>
 						<p></p>
-						<a id="searchReqPreview" href="requestPublic.html">
-							100 Bottles of Water
-						</a>
-					</div>
-				</div>
-			</li>
-
-			<li><hr class="style-six"></hr></li>
-
-			<li class="searchItem">
-				<div class="searchPost">
-					<div class="photo">
-						<img alt="OrganizationName" class="photo" src="images/enn.jpg">
-					</div>
-					<div class="searchContent">
-						<label class="searchOrgName">
-							Emergency Nutritional Network
-						</label>
-						<div class="date">
-							<p class="searchDate">5/16/14</p>
-							<p>Oxford, UK</p>
-						</div>
-						<p></p>
 						<a id="searchReqPreview" href="request1.html">
-							5 Laserjet printers
+							50 Bottles of Water
 						</a>
 					</div>
 				</div>
@@ -155,6 +132,29 @@
 						<p></p>
 						<a id="searchReqPreview" href="request1.html">
 							20 Flea medicine
+						</a>
+					</div>
+				</div>
+			</li>
+
+			<li><hr class="style-six"></hr></li>
+
+			<li class="searchItem">
+				<div class="searchPost">
+					<div class="photo">
+						<img alt="OrganizationName" class="photo" src="images/enn.jpg">
+					</div>
+					<div class="searchContent">
+						<label class="searchOrgName">
+							Emergency Nutritional Network
+						</label>
+						<div class="date">
+							<p class="searchDate">5/16/14</p>
+							<p>Oxford, UK</p>
+						</div>
+						<p></p>
+						<a id="searchReqPreview" href="request1.html">
+							5 Laserjet printers
 						</a>
 					</div>
 				</div>
