--- a/searchResults_need.html
+++ b/searchResults_need.html
@@ -61,8 +61,8 @@
 							<p>San Francisco, CA</p>
 						</div>
 						<p></p>
-						<a id="searchReqPreview" href="requestPublic.html">
-							100 Bottles of Water
+						<a id="searchReqPreview" href="request1.html">
+							50 Bottles of Water
 						</a>
 					</div>
 				</div>
