--- a/donationSubmitted.html
+++ b/donationSubmitted.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Donation Submitted</title>
@@ -8,32 +8,32 @@
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
 			<a href="profile.html">ACCOUNT</a>
-			<a href="new1.html">MESSAGES</a>
+			<a href="message.html">MESSAGES</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div style="float: right; width: 10%; margin-bottom: 2rem">
-			<p>Welcome</p>
-			<p id="orgName">Serena Xu!</p>			
+			<a href="contAccount.html" id="orgName">Serena Xu</a>
+			<a action="logOut">Log Out</a>
 			</div>
 	</div>
-	
+
 
 	<div id="promiseBox" style="height: 20em;">
 			<p>Thank you for responding to the request. We will follow up shortly about how to proceed with this donation.</p>
 			<p>Please continue searching and browsing.</p>
-			<form id="tfnewsearch" method="get" action="searchDatabase" onclick="searchResults.html">
+			<form id="tfnewsearch" method="get" action="searchResults.html" onclick="searchResults.html">
 		        <input type="text" class="tftextinput" name="q" size="21" maxlength="120"><input style="width: 5em;" type="submit" value="search" class="tfbutton">
 			<button class="tfbutton" onclick="window.location.href='searchResults.html'" href="searchResults.html">Browse</button>
 			</form>
 			<div class="tfclear"></div>
 
 	</div>
-	
+
 <footer>
 	<nav class="bottomLinks">
 			<a href="index.html">About Us</a>
