--- a/historyRequestCont.html
+++ b/historyRequestCont.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
-	<title>50 Bottles of Water</title>
+	<title>100 Bottles of Water</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
-			<a href="profile.html">ACCOUNT</a>
-			<a href="new1.html">MESSAGES</a>
+			<a href="contAccount.html">ACCOUNT</a>
+			<a href="message.html">MESSAGES</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div style="float: right; margin-bottom: 2rem">
-				<a href="orgAccount.html" id="orgName">Serena Xu</a>	
+				<a href="contAccount.html" id="orgName">Serena Xu</a>
 				<a action="logOut">Log Out</a>
 			</div>
 	</div>
@@ -115,10 +115,10 @@
 		-->
 
 			<header class="fulfilled">80% Fulfilled</header>
-			<div class="progressBar">			
+			<div class="progressBar">
 				<div class="completeBar" style="width: 80%;"></div>
 			</div>
-		
+
 			<div style="margin-top: 8%;">
 				<ul class="requestDates">
 					<li>
@@ -141,18 +141,18 @@
 
 
 				</ul>
-			
+
 			</div>
 			<p></p>
 
 		</div>
 
 		<div id="box" style="overflow-y: scroll; height: 20em; width: 40%; float: right;">
-		
+
 			<div style="margin-top: 8%;">
 				<ul class="requestDates">
 					<li>
-						<p>The <a href="orgAccount.html">Salvation Army</a>thanks you for your generous donation. 
+						<p>The <a href="orgAccount.html">Salvation Army</a>thanks you for your generous donation.
 						</p>
 					</li>
 
@@ -211,7 +211,7 @@
 				<li><hr></li>
 
 			</ul>  -->
-			
+
 			</div>
 			<p></p>
 
