--- a/newRequest.html
+++ b/newRequest.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>New Request</title>
@@ -16,44 +16,46 @@
 			<a href="profile.html">ACCOUNT</a>
 			<a href="new1.html">MESSAGES</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img class="logo" style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div style="float: right; width: 10%; margin-bottom: 2rem">
-			<p>Welcome</p>
-			<p id="orgName">Organization</p>			
+			<a href="contAccount.html" id="orgName">Salvation Army</a>
+			<a action="logOut">Log Out</a>
 			</div>
 	</div>
 
-	<div id="box" style="margin: 5% auto 5% auto; border-radius:1em; width: 50em; height: 20em; padding: 3em;">
-		
+	<div id="box" style="margin: 5% auto 5% auto; border-radius:1em; width: 50em; padding: 3em;">
+
 			<form action="requestReceived.html" method="post" id="subForm">
-			<header>New Request</header>
-			<ul>
+			<header class="fulfilled">New Request</header>
+			<ul class="newRequest">
 				<li><label for="name">Need:</label> <input type="text" name="name" id="name" required /></li>
 				<li><label for="amt">Amount:</label> <input type="number" name="name" id="number" required /></li>
 				<li><label for="name">Location:</label> <input type="text" name="name" id="name" required /></li>
-				<li><label for="name">Partial donations accepted?</label> 
+				<li><label for="name">Partial donations accepted?</label>
 					<input style="width: 3em;" type="radio" name="q1" value="y"><label style="width: 1em;">Yes</label>
 					<input style="color: #000; width: 3em;" type="radio" name="q1" value="n"><label style="width: 1em;">No</label>
 				</li>
-				<li><label for="name">Donors need to transport?</label> 
+				<li><label for="name">Donors need to transport?</label>
 					<input style="width: 3em;" type="radio" name="q1" value="y"><label style="width: 1em;">Yes</label>
 					<input style="color: #000; width: 3em;" type="radio" name="q1" value="n"><label style="width: 1em;">No</label>
 				</li>
 				<li><label for="name">Purpose:</label> <input placeholder="If the need is for specific event" type="text" name="name" id="name"/></li>
-				<li><label for="name">Details:</label> 
-					<textarea rows="5" cols="47" placeholder="Optional. However a brief description will help you connect with potential donors."></textarea><br />
+				<li><label for="name">Details:</label>
+					<textarea class="desRequest" rows="5" cols="47" placeholder="Optional. However a brief description will help you connect with potential donors."></textarea><br />
 					</textarea></li>
-				<li><p></p><p></p></li>
+				<li><br></br></li>
+				<li>
 					<input class="tfbutton" type="submit" value="Submit Request" />
+				</li>
 			</ul>
 			</form>
 		</div>
-	
+
 	</div>
 <footer>
 	<nav class="bottomLinks">
