--- a/orgAccount.html
+++ b/orgAccount.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>MY ACCOUNT</title>
@@ -7,17 +7,17 @@
 <body>
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
-			<a href="profile.html">ACCOUNT</a>
-			<a href="new1.html">MESSAGES</a>
+			<a href="orgAccount.html">ACCOUNT</a>
+			<a href="message.html">MESSAGES</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div class="log" style="float: right; margin: 0 2rem 2rem 0">
-			<a href="contAccount.html" id="orgName">Salvation Army</a>	
+			<a href="contAccount.html" id="orgName">Salvation Army</a>
 			<a action="logOut">Log Out</a>
 			</div>
 	</div>
@@ -38,7 +38,7 @@
 					<div style="width: 65%; float: right; height: 80%;">
 					<p class="orgDes">The Salvation Army, an international movement, is an evangelical part of the universal Christian church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination.</p>
 					</div>
-					
+
 				</li>
 
 				<li><hr></li>
@@ -49,7 +49,7 @@
 					</div>
 
 					<div style="width: 65%; float: right; height: 80%;">
-					<p class="orgDes">We have many locations through the United States.</p>
+					<p class="orgDes">San Francisco, CA</p>
 					</div>
 				</li>
 
@@ -73,7 +73,7 @@
 					</div>
 
 					<div style="width: 65%; float: right; height: 80%;">
-					<p class="orgDes">something@something.org</p>
+					<p class="orgDes">info@salvationarmy.org</p>
 					</div>
 				</li>
 
@@ -97,7 +97,7 @@
 
 		</div>
 
-		<div class="reqAcctBox"> 
+		<div class="reqAcctBox">
 			<div id="box" style="height: 15em; margin-bottom: 3%;">
 				<div>
 					<button class="tfbutton" onclick="window.location.href='orgAccount.html'" href="postings.html">Make New Request</button>
@@ -109,20 +109,20 @@
 					<nav id="menu">
 						<ul class="parent-menu">
 						<li>
-							<a href="#">
-								<div style="float: left;">Request Name</div>
+							<a href="requestPublicOrg.html">
+								<div style="float: left;">100 Bottles of Water</div>
 								<div style="float: right;">6/20/14</div>
-							</a>							
+							</a>
 						</li>
 						<li>
 							<a href="#">
-								<div style="float: left;">Request Name</div>
+								<div style="float: left;">40 Paint Buckets</div>
 								<div style="float: right;">6/16/14</div>
-							</a>							
+							</a>
 						</li>
 						</ul>
 					</nav>
-				</div>	
+				</div>
 
 			</div>
 			<div id="box" style=" height: 20em; ">
@@ -132,28 +132,28 @@
 					<nav id="menu">
 						<ul class="parent-menu">
 						<li>
-							<a href="#">
-								<div style="float: left;">Request Name</div>
+							<a href="historyRequestOrg.html">
+								<div style="float: left;">50 Bottles of Water</div>
 								<div style="float: right;">6/13/14</div>
-							</a>							
+							</a>
 						</li>
 						<li>
 							<a href="#">
-								<div style="float: left;">Request Name</div>
+								<div style="float: left;">20 White Shirts</div>
 								<div style="float: right;">5/10/14</div>
-							</a>							
+							</a>
 						</li>
 						<li>
 							<a href="#">
-								<div style="float: left;">Request Name</div>
+								<div style="float: left;">100 Hot Meals</div>
 								<div style="float: right;">5/1/14</div>
-							</a>							
+							</a>
 						</li>
 						<li>
 							<a href="#">
-								<div style="float: left;">Request Name</div>
+								<div style="float: left;">100 Bottles of Water</div>
 								<div style="float: right;">4/1/14</div>
-							</a>							
+							</a>
 						</li>
 						</ul>
 					</nav>
@@ -162,7 +162,7 @@
 		</div>
 
 	</div>
-	
+
 <footer>
 	<nav class="bottomLinks">
 			<a href="index.html">About Us</a>
