--- a/orgAccountPublic.html
+++ b/orgAccountPublic.html
@@ -1,27 +1,27 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Organization Profile</title>
+	<title>Salvation Army</title>
 	<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
 			<a href="profile.html">ACCOUNT</a>
-			<a href="new1.html">MESSAGES</a>
+			<a href="message.html">MESSAGES</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div style="float: right; margin: 0 2rem 2rem 0">
-			<a href="contAccount.html" id="orgName">Serena Xu</a>	
+			<a href="contAccount.html" id="orgName">Serena Xu</a>
 			<a action="logOut">Log Out</a>
 			</div>
 	</div>
-	
+
 	<div id="box" style="padding: 3% 3% 3% 3%; margin: 2% auto 0 auto; width: 40%;">
 		<header class="reqHead" style="margin: 2% auto 5% auto; text-align: center;">Salvation Army</header>
 			<div class="profileImg">
@@ -37,7 +37,7 @@
 					<div style="width: 65%; float: right; height: 80%;">
 					<p class="orgDes">The Salvation Army, an international movement, is an evangelical part of the universal Christian church. Its message is based on the Bible. Its ministry is motivated by the love of God. Its mission is to preach the gospel of Jesus Christ and to meet human needs in His name without discrimination.</p>
 					</div>
-					
+
 				</li>
 
 				<li><hr></li>
@@ -48,7 +48,7 @@
 					</div>
 
 					<div style="width: 65%; float: right; height: 80%;">
-					<p class="orgDes">We have many locations through the United States.</p>
+					<p class="orgDes">San Francisco, CA</p>
 					</div>
 				</li>
 
@@ -72,7 +72,7 @@
 					</div>
 
 					<div style="width: 65%; float: right; height: 80%;">
-					<p class="orgDes">something@something.org</p>
+					<p class="orgDes">info@salvationarmy.org</p>
 					</div>
 				</li>
 
@@ -91,11 +91,11 @@
 				<li><hr></li>
 
 			</ul>
-		
+
 	</div>
 
 
-	
+
 <footer>
 	<nav class="bottomLinks">
 			<a href="index.html">About Us</a>
