--- a/requestEdit.html
+++ b/requestEdit.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Name of Request</title>
@@ -8,17 +8,17 @@
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
 			<a href="profile.html">ACCOUNT</a>
-			<a href="new1.html">MESSAGES</a>
+			<a href="message.html">MESSAGES</a>
 	</div>
-	
+
 	<div id="introBox">
 			<div style="float: left; width: 20%; margin-bottom: 2rem">
 			<img style="width: 70%;" src="helpLogo.png">
 			</div>
-			
+
 			<div style="float: right; width: 10%; margin-bottom: 2rem">
 			<p>Welcome</p>
-			<p id="orgName">Salvation Army!</p>	
+			<p id="orgName">Salvation Army!</p>
 			</div>
 	</div>
 
@@ -32,7 +32,7 @@
 					</div>
 
 					<div style="width: 65%; float: right; height: 80%;">
-					<input placeholder="50 bottles of water" type="text" name="name" id="need" required />
+					<input placeholder="100 bottles of water" type="text" name="name" id="need" required />
 					</div>
 				</li>
 
@@ -45,6 +45,18 @@
 
 					<div style="width: 65%; float: right; height: 80%;">
 					<p class="orgDes">Salvation Army</p>
+					</div>
+				</li>
+
+				<li><hr></li>
+
+				<li>
+					<div style="width: 35%; float: left; height: 80%;">
+						<label for="name">Location:</label>
+					</div>
+
+					<div style="width: 65%; float: right; height: 80%;">
+					<input placeholder="832 Folsom St, San Francisco, CA" type="text" name="name" id="need" required />
 					</div>
 				</li>
 
@@ -101,7 +113,7 @@
 
 				<li><hr></li>
 
-				<button class="tfbutton" onclick="window.location.href='requestEdit.html'" href="requestEdit.html">Save Changes</button>
+				<button class="tfbutton" onclick="window.location.href='requestPublicOrg.html'" href="requestPublicOrg.html">Save Changes</button>
 
 			</ul>
 	</div>
@@ -109,7 +121,7 @@
 	<div id="box" style="height: 100%; width: 40%; float: right;">
 		<header class="orgName">Please complete the donation form.</header>
 		<div class="donatePhoto">
-			<div style="padding-left: 4%; float: left; height: 100%;">			
+			<div style="padding-left: 4%; float: left; height: 100%;">
 				<img alt="Insert Photo"src="images/donationPhoto.jpg" height="100%">
 			</div>
 			<div style="float: right; padding-right: 20%;">
@@ -117,18 +129,18 @@
 			<button class="tfbutton" onclick="window.location.href='dophot.html'" href="dophoto.html">Upload Photo</button>
 			</div>
 		</div>
-		
+
 		<div style="margin-top: 8%;">
-			<ul>
+			<ul <ul class="aRequest">
 				<li><label for="name">What are you donating?</label> <input type="text" name="name" id="name" required />
 				</li>
 				<li><label for="name">How much are you donating?</label> <input type="number" name="name" id="name" required /></li>
-				<li><label for="name">Can you transport to specified location?</label> 
+				<li><label for="name">Can you transport to specified location?</label>
 					<input style="width: 3em;" type="radio" name="q1" value="y">Yes
 					<input style="width: 3em;" type="radio" name="q1" value="n">No
 				</li>
 				<li><p></p></li>
-				
+
 			</ul>
 		</div>
 		<p></p>
