--- a/searchResultsAsOrg_loc.html
+++ b/searchResultsAsOrg_loc.html
@@ -7,8 +7,8 @@
 <body>
 	<div class="topLinks">
 			<a href="index.html">HOME</a>
-			<a href="contAccount.html">ACCOUNT</a>
-			<a href="message.html">MESSAGES</a>
+			<a href="orgAccount.html">ACCOUNT</a>
+			<a href="messageOrg.html">MESSAGES</a>
 	</div>
 
 	<div id="introBox">
@@ -17,7 +17,7 @@
 			</div>
 
 			<div class="log" style="float: right; margin-bottom: 2rem">
-				<a href="contAccount.html">Serena Xu</a>
+				<a href="contAccount.html">Salvation Army</a>
 				<a action="logOut">Log Out</a>
 			</div>
 	</div>
@@ -35,11 +35,11 @@
 
 		<div style="float: right; height: 2em; width: 8em;">
 			<select onchange="location = this.options[this.selectedIndex].value;" class="tfbutton" style="width: 100%; height: 100%;">
-				<option value="searchResults.html">Sort By</option>
-  				<option value="searchResults.html">Date</option>
-  				<option value="searchResults_org.html">Organization</option>
-  				<option value="searchResults_need.html">Needs</option>
-  				<option value="searchResults_loc.html">Location</option>
+				<option value="searchResultsAsOrg.html">Sort By</option>
+  				<option value="searchResultsAsOrg.html">Date</option>
+  				<option value="searchResultsAsOrg_org.html">Organization</option>
+  				<option value="searchResultsAsOrg_need.html">Needs</option>
+  				<option value="searchResultsAsOrg_loc.html">Location</option>
 			</select>
 	</div>
 	</nav>
@@ -61,31 +61,8 @@
 							<p>San Francisco, CA</p>
 						</div>
 						<p></p>
-						<a id="searchReqPreview" href="requestPublic.html">
+						<a id="searchReqPreview" href="requestPublicOrg.html">
 							100 Bottles of Water
-						</a>
-					</div>
-				</div>
-			</li>
-
-			<li><hr class="style-six"></hr></li>
-
-			<li class="searchItem">
-				<div class="searchPost">
-					<div class="photo">
-						<img alt="OrganizationName" class="photo" src="images/enn.jpg">
-					</div>
-					<div class="searchContent">
-						<label class="searchOrgName">
-							Emergency Nutritional Network
-						</label>
-						<div class="date">
-							<p class="searchDate">5/16/14</p>
-							<p>Oxford, UK</p>
-						</div>
-						<p></p>
-						<a id="searchReqPreview" href="request1.html">
-							5 Laserjet printers
 						</a>
 					</div>
 				</div>
@@ -107,7 +84,7 @@
 							<p>New York, NY</p>
 						</div>
 						<p></p>
-						<a id="searchReqPreview" href="request1.html">
+						<a id="searchReqPreview" href="requestPublicOrg.html">
 							100 Winter coats
 						</a>
 					</div>
@@ -155,6 +132,29 @@
 						<p></p>
 						<a id="searchReqPreview" href="request1.html">
 							20 Flea medicine
+						</a>
+					</div>
+				</div>
+			</li>
+
+			<li><hr class="style-six"></hr></li>
+
+			<li class="searchItem">
+				<div class="searchPost">
+					<div class="photo">
+						<img alt="OrganizationName" class="photo" src="images/enn.jpg">
+					</div>
+					<div class="searchContent">
+						<label class="searchOrgName">
+							Emergency Nutritional Network
+						</label>
+						<div class="date">
+							<p class="searchDate">5/16/14</p>
+							<p>Oxford, UK</p>
+						</div>
+						<p></p>
+						<a id="searchReqPreview" href="request1.html">
+							5 Laserjet printers
 						</a>
 					</div>
 				</div>
