--- a/searchResults_org.html
+++ b/searchResults_org.html
@@ -46,30 +46,7 @@
 
 			<div class="tfclear"></div>
 
-		<ul class="searchResults">
-			<li class="searchItem">
-				<div class="searchPost">
-					<div class="photo">
-						<img alt="OrganizationName" class="photo" src="images/salvationArmy.jpg">
-					</div>
-					<div class="searchContent">
-						<label class="searchOrgName">
-							<a href="orgAccountPublic.html">Salvation Army</a>
-						</label>
-						<div class="date">
-							<p class="searchDate">6/16/14</p>
-							<p>San Francisco, CA</p>
-						</div>
-						<p></p>
-						<a id="searchReqPreview" href="requestPublic.html">
-							100 Bottles of Water
-						</a>
-					</div>
-				</div>
-			</li>
-
-			<li><hr class="style-six"></hr></li>
-
+			<ul class="searchResults">
 			<li class="searchItem">
 				<div class="searchPost">
 					<div class="photo">
@@ -96,19 +73,19 @@
 			<li class="searchItem">
 				<div class="searchPost">
 					<div class="photo">
-						<img alt="OrganizationName" class="photo" src="images/red-cross.jpg">
+						<img alt="OrganizationName" class="photo" src="images/friendsOfAnimals.jpg">
 					</div>
 					<div class="searchContent">
 						<label class="searchOrgName">
-							American Red Cross
+							Friends of Animals
 						</label>
 						<div class="date">
-							<p class="searchDate">5/10/14</p>
-							<p>New York, NY</p>
+							<p class="searchDate">1/14/14</p>
+							<p>Centennial, CO</p>
 						</div>
 						<p></p>
 						<a id="searchReqPreview" href="request1.html">
-							100 Winter coats
+							20 Flea medicine
 						</a>
 					</div>
 				</div>
@@ -142,19 +119,42 @@
 			<li class="searchItem">
 				<div class="searchPost">
 					<div class="photo">
-						<img alt="OrganizationName" class="photo" src="images/friendsOfAnimals.jpg">
+						<img alt="OrganizationName" class="photo" src="images/red-cross.jpg">
 					</div>
 					<div class="searchContent">
 						<label class="searchOrgName">
-							Friends of Animals
+							American Red Cross
 						</label>
 						<div class="date">
-							<p class="searchDate">1/14/14</p>
-							<p>Centennial, CO</p>
+							<p class="searchDate">5/10/14</p>
+							<p>New York, NY</p>
 						</div>
 						<p></p>
 						<a id="searchReqPreview" href="request1.html">
-							20 Flea medicine
+							100 Winter coats
+						</a>
+					</div>
+				</div>
+			</li>
+
+			<li><hr class="style-six"></hr></li>
+
+			<li class="searchItem">
+				<div class="searchPost">
+					<div class="photo">
+						<img alt="OrganizationName" class="photo" src="images/salvationArmy.jpg">
+					</div>
+					<div class="searchContent">
+						<label class="searchOrgName">
+							<a href="orgAccountPublic.html">Salvation Army</a>
+						</label>
+						<div class="date">
+							<p class="searchDate">6/16/14</p>
+							<p>San Francisco, CA</p>
+						</div>
+						<p></p>
+						<a id="searchReqPreview" href="requestPublicOrg.html">
+							100 Bottles of Water
 						</a>
 					</div>
 				</div>
