changes for Sonny's comments

--- a/newContributor.html
+++ b/newContributor.html
@@ -37,7 +37,10 @@
 					<p style="margin:0; text-align: center;" id="nameInfo"></p>
 				</li>
 				<li>
-					<label for="city">Location:</label> <input placeholder="City, State" type="text" name="city" id="city"/>
+					<label for="city">Address:</label> <input placeholder="Door Number, Street" type="text" name="city" id="city"/>
+				</li>
+				<li>
+					<label for="city"></label> <input placeholder="City, State, Zip" type="text" name="city" id="city"/>
 				</li>
 				<li>
 					<label for="phone">* Phone Number:</label> <input type="tel" id="phone" id="phone" /><p style="margin:0; text-align: center;" id="phoneInfo"></p>
