--- a/newOrg.html
+++ b/newOrg.html
@@ -39,7 +39,14 @@
 					<p style="margin:0; text-align: center;" id="nameInfo"></p>
 				</li>
 				<li>
-					<label for="address">* Address:</label> <input type="text" name="address" id="address" /><p style="margin:0; text-align: center;" id="addressInfo"></p>
+					<label for="tax">* Tax ID:</label> <input type="text" placeholder="ID is needed for verification" name="name" id="name" />
+					<p style="margin:0; text-align: center;" id="nameInfo"></p>
+				</li>
+				<li>
+					<label for="address">* Address:</label> <input placeholder="Door Number, Street" type="text" name="address" id="address" /><p style="margin:0; text-align: center;" id="addressInfo"></p>
+				</li>
+				<li>
+					<label for="address"></label> <input placeholder="City, State, Zip" type="text" name="address" id="address" /><p style="margin:0; text-align: center;" id="addressInfo"></p>
 				</li>
 				<li>
 					<label for="contact">Name of Contact:</label> <input type="text" name="contact" id="contact"/>
@@ -52,6 +59,9 @@
 					<p style="margin:0; text-align: center;" id="emailInfo"></p>
 				</li>
 				<p></p>
+				<li>
+					<label for="linkedin">Website:</label> <input type="URL" name="web" id="web"/>
+				</li>
 				<li>
 					<label for="linkedin">LinkedIn URL:</label> <input type="URL" name="linkedin" id="linkedin"/>
 				</li>
